--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "11.7.0",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.9.3",
+    "@headlessui/react": "^1.6.6",
     "@mui/lab": "^5.0.0-alpha.85",
     "@mui/material": "^5.8.3",
     "@sanity/client": "^3.3.0",
