--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^6.3.4",
     "next": "12.1.6",
     "next-connect": "^0.12.2",
+    "next-pwa": "^5.5.5",
     "nextjs-progressbar": "^0.0.14",
     "paytmchecksum": "^1.5.0",
     "react": "^18.2.0",
