--- a/sanity/package.json
+++ b/sanity/package.json
@@ -14,6 +14,7 @@
     "sanity"
   ],
   "dependencies": {
+    "@mdx-js/react": "^2.1.3",
     "@sanity/base": "^2.31.0",
     "@sanity/core": "^2.31.0",
     "@sanity/dashboard": "^2.31.0",
@@ -32,6 +33,5 @@
     "sanity-plugin-pdf-generator": "^1.0.13",
     "sanity-plugin-vercel-deploy": "^2.1.6",
     "styled-components": "^5.2.0"
-  },
-  "devDependencies": {}
+  }
 }
