--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@mui/lab": "^5.0.0-alpha.85",
     "@mui/material": "^5.8.3",
     "@novu/notification-center": "^0.6.2",
+    "@portabletext/react": "^2.0.0",
     "@sanity/client": "^3.3.0",
     "@sanity/image-url": "^1.0.1",
+    "@sanity/uuid": "^3.0.1",
+    "@sanity/vision": "^3.1.4",
     "apexcharts": "^3.35.3",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
@@ -30,24 +33,33 @@
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
-    "next": "12.1.6",
+    "next": "^13.1.1",
     "next-connect": "^0.12.2",
-    "next-pwa": "5.5.4",
+    "next-pwa": "^5.6.0",
+    "next-sanity": "^3.1.8",
     "nextjs-progressbar": "^0.0.14",
     "paytmchecksum": "^1.5.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
-    "react-dom": "18.1.0",
+    "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
-    "react-icons": "^4.3.1",
+    "react-icons": "^4.7.1",
+    "react-is": "^18.2.0",
     "react-spinners": "^0.12.0",
     "react-toastify": "^9.0.1",
+    "sanity": "^3.1.4",
     "socket.io": "^4.5.1",
-    "socket.io-client": "^4.5.1"
+    "socket.io-client": "^4.5.1",
+    "styled-components": "^5.3.6"
+  },
+  "overrides": {
+    "@sanity/ui": "1.0.5"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.19.1",
     "autoprefixer": "^10.4.7",
-    "eslint": "8.15.0",
+    "eslint": "^8.30.0",
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24"
