--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "1.1.1",
     "crypto-js": "^4.1.1",
     "feather-icons-react": "^0.5.0",
+    "groq": "^3.2.5",
     "https": "^1.0.0",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
